# otus-cpp

./: .gitignore  README.md
lesson_02/: CMakeLists.txt  hello_world.cpp  out_function.cpp
lesson_05/homework_03/: CMakeLists.txt  game.cpp  game.h  test.cpp  utils.cpp  utils.h
lesson_05/homework_03/iomodule/: io.cpp  io.h
lesson_05/webinar-linkage-main/: CMakeLists.txt  README.md  compilation.asm  compilation.cpp  compilation.i  dynamic_library_usage.cpp  file_io.cpp  static_library_usage.cpp
lesson_05/webinar-linkage-main/dynamic_library/: CMakeLists.txt  calculation.cpp  calculation.h
lesson_05/webinar-linkage-main/static_library/: CMakeLists.txt
lesson_07/source-12995-06c931/menu/: CMakeLists.txt
lesson_10/04.homework-345726-d6ac66/: Ball.cpp  Ball.hpp  World.cpp
lesson_10/homework_04/: Ball.cpp  Ball.hpp  Physics.cpp  World.cpp
lesson_10/source/: CMakeLists.txt  classes.cpp  complex.cpp  complex.h  complex_main.cpp  image_medium.pbm  image_medium_2.pbm  image_simple.pbm  netpbm.cpp  netpbm.h  structure.cpp  structure_inheritance.cpp  structure_operators.cpp  structure_stream.cpp  testfile.txt
lesson_12/homework_05/: statistics.cpp
lesson_12/sources/: 2.inheritance.try-poly.cpp  CMakeLists.txt
lesson_13/sources/: lec_11_06_func_factorial.cpp  lec_11_08_func_generate.cpp  lec_11_09_func_cpp_impl.cpp  lec_11_14_class_template_method.cpp
lesson_13_template/sources/: CMakeLists.txt  lec_11_03_func_max_template.cpp  lec_11_04_func_max_specialization.cpp  lec_11_07_func_several_args.cpp  lec_11_09_01_func_cpp_header.h  lec_11_10_class_template.cpp  lec_11_11_class_template_inherit.cpp  lec_11_15_class_non_template_template.cpp
lesson_14/homework_06/: CMakeLists.txt  main.cpp  test_2.cpp  tests.cpp
lesson_14/homework_06/custom_containers/: list_container.h  serial_container.h  serial_container.ipp
lesson_14/sources/: complex_value.cpp  complex_value_copy.cpp  destructors.cpp
lesson_14/sources/homework_06/: CMakeLists.txt
lesson_14_containers/homework_06/: CMakeLists.txt  tests.cpp
lesson_14_containers/homework_06/custom_containers/: list_container.h  serial_container.h
lesson_14_containers/sources/: convertion.cpp  explicit.cpp  move.cpp  virtual_destructor.cpp
lesson_16/homework_07/: CMakeLists.txt  list_container_tests.cpp
lesson_16/unittests/: checkcardnum.h  find_incorrect.cpp  main.cpp  tests.cpp  tests.txt
lesson_16/unittests/gtests/: tests.cpp
lesson_16/unittests/healthchecker/: CMakeLists.txt  healthchecker_di.h  tests.cpp
lesson_16/unittests/tests/: CMakeLists.txt  skip_test_incorrect_non_digit.cpp  test_incorrect_visa.cpp  test_skip_spaces.cpp
lesson_16_gtest/homework_07/: CMakeLists.txt  list_container_test.cpp  serial_container_test.cpp
lesson_16_gtest/unittests/: CMakeLists.txt  checkcardnum.cpp
lesson_16_gtest/unittests/healthchecker/: healthchecker.h
lesson_16_gtest/unittests/tests/: test_correct_visa.cpp
lesson_21_library/sources/webinar-libraries-master/: README.md
lesson_21_library/sources/webinar-libraries-master/dynamic_lib/: main_dynamic_load.cpp
lesson_21_library/sources/webinar-libraries-master/script/: linux.sh  windows.cmd
lesson_21_library/sources/webinar-libraries-master/static_lib/: CMakeLists.txt
